<resources>
    <string name="app_name">University_Assignments_Tracker</string>
    <string name="field_email">Email</string>
    <string name="field_username">Username</string>
    <string name="field_password">Password</string>
    <string name="field_repeat_password">Repeat Password</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_sign_in">Sign In</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_logout">Logout</string>
    <string name="profile_title_hint">Welcome to your University Assignments Tracker!</string>
    <string name="edit_profile_description">Right now you can edit only username</string>
    <string name="action_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="field_title">Title</string>
    <string name="field_subject">Subject</string>
    <string name="field_rate">Rate</string>
    <string name="field_deadline">Deadline</string>
    <string name="field_description">Description</string>
    <string name="action_add">Add</string>
    <string name="text_status">Status:</string>
    <string name="field_teacher">Teacher</string>
    <string name="please_wait">Please wait...</string>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="subjects">Subjects</string>
</resources>